--- a/GeekBrains/css/style.css
+++ b/GeekBrains/css/style.css
@@ -9,8 +9,11 @@
 	background: #fff;
 }
 
-.clearfix {
-
+.clearfix:after {
+	content: "";
+	height: 0;
+	display: block;
+	clear: both;
 }
 
 header {
@@ -20,10 +23,14 @@ header {
 }
 
 .logo {
-	margin: 30px 0 20px 0;
+	margin: 30px 0 20px 140px;
+	float: left;
 }
 
 .menu {
+	margin-right: 140px;
+	margin-top: 62px;
+	margin-bottom: 58px;
 	
 }
 
@@ -31,4 +38,98 @@ header {
 	display: inline-block;
 	float: right;
 	list-style: none;
+	padding: 0 0 0 65px;
+}
+
+.menu_a {
+	text-decoration: none;
+	font-size: 19px;
+	color: #545454;
+}
+
+.icon-mail, .icon-cog, .icon-user, .icon-home {
+	color: #a292b3;
+} 
+
+@font-face {
+  font-family: 'fontello';
+  src: url('../font/fontello.eot?28921403');
+  src: url('../font/fontello.eot?28921403#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?28921403') format('woff2'),
+       url('../font/fontello.woff?28921403') format('woff'),
+       url('../font/fontello.ttf?28921403') format('truetype'),
+       url('../font/fontello.svg?28921403#fontello') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
+/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
+/*
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  @font-face {
+    font-family: 'fontello';
+    src: url('../font/fontello.svg?28921403#fontello') format('svg');
+  }
+}
+*/
+ 
+ [class^="icon-"]:before, [class*=" icon-"]:before {
+  font-family: "fontello";
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+ 
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  margin-right: .2em;
+  text-align: center;
+  /* opacity: .8; */
+ 
+  /* For safety - reset parent styles, that can break glyph codes*/
+  font-variant: normal;
+  text-transform: none;
+ 
+  /* fix buttons height, for twitter bootstrap */
+  line-height: 1em;
+ 
+  /* Animation center compensation - margins should be symmetric */
+  /* remove if not needed */
+  margin-left: .2em;
+ 
+  /* you can be more comfortable with increased icons size */
+  /* font-size: 120%; */
+ 
+  /* Font smoothing. That was taken from TWBS */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+ 
+  /* Uncomment for 3D effect */
+  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+}
+ 
+.icon-mail:before { content: '\e800'; } /* '' */
+.icon-cog:before { content: '\e801'; } /* '' */
+.icon-home:before { content: '\e802'; } /* '' */
+.icon-user:before { content: '\f061'; } /* '' */
+
+
+.image {
+	background-image: url("../img/fon_1.jpg");
+	background-position: center;
+	background-repeat: no-repeat;
+	width: 1020px;
+	height: 486px;
+	margin: 0 140px 0 140px;
+	position: relative;
+}
+
+.minto {
+	font-size: 117px;
+	font-family: "Myriad Pro" "Arial";
+	color: rgba(255, 255, 255, 0.969);
+	line-height: 0.308;
+	text-align: center;
+	text-shadow: 0px 6px 0px rgba(130, 105, 157, 0.75);
+	position: absolute;
 }
