--- a/GeekBrains/css/style.css
+++ b/GeekBrains/css/style.css
@@ -114,7 +114,11 @@ header {
 .icon-user:before { content: '\f061'; } /* '' */
 
 
-.image {
+
+
+
+
+.block_1 {
 	background-image: url("../img/fon_1.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
@@ -122,6 +126,9 @@ header {
 	height: 486px;
 	margin: 0 140px 0 140px;
 	position: relative;
+	display: flex;
+	justify-content: center;
+
 }
 
 .minto {
@@ -132,4 +139,105 @@ header {
 	text-align: center;
 	text-shadow: 0px 6px 0px rgba(130, 105, 157, 0.75);
 	position: absolute;
+	margin-top: 200px;
+}
+
+.minto_2 {
+  font-size: 31px;
+  font-family: "SofiaProLight" "Arial";
+  color: rgb(255, 255, 255);
+  line-height: 1.161;
+  text-align: center;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.45);
+  position: absolute;
+  margin-top: 280px;
+}
+
+
+
+
+
+.block_2 {
+	border-top: solid 1px;
+	border-bottom: solid 1px;
+	height: 134px;
+	width: 1000px;
+	margin: 40px 150px 0 150px;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	padding-top: 15px;
+}
+
+.lorem {
+  font-size: 23px;
+  font-family: "Segoe UI";
+  color: black;
+  font-style: italic;
+  line-height: 1.565;
+  text-align: center;
+  position: absolute;
+}
+
+.lorem_1 {
+  font-size: 23px;
+  font-family: "Segoe UI";
+  color: rgb(130, 105, 157);
+  font-weight: bold;
+  font-style: italic;
+  line-height: 1.565;
+  text-align: center;
+}
+
+
+
+
+.block_3 {
+	height: 375px;
+	width: 1020px;
+	margin: 0 140px 0 140px;
+	position: relative;
+}
+
+.fon_2 {
+	margin-top: 22px;
+	margin-left: 10px;
+	float: left;
+}
+
+.lorem_3 {
+	font-size: 31px;
+	font-family: "Segoe UI" "Arial";
+	color: rgb(80, 80, 81);
+	font-weight: bold;
+	line-height: 1.161;
+	margin-top: 90px;
+	margin-left: 373px;
+	margin-bottom: 48px;
+	position: absolute;
+}
+
+.lorem_4 {
+	font-size: 15px;
+	font-family: "Segoe UI" "Arial"
+	color: rgb(131, 131, 131);
+	line-height: 1.867;
+	position: absolute;
+	margin-top: 138px;
+	margin-left: 373px;
+
+}
+
+.read_more {
+	text-decoration: none;
+	font-size: 13px;
+	font-family: "Segoe UI";
+	color: rgb(130, 105, 157);
+	font-style: italic;
+	line-height: 2.769;
+	position: absolute;
+	margin-top: 300px;
+	margin-left: 928px;
+	margin-right: 10px;
+	display: flex;
 }
