--- a/GeekBrains/css/style.css
+++ b/GeekBrains/css/style.css
@@ -31,7 +31,6 @@ header {
 	margin-right: 140px;
 	margin-top: 62px;
 	margin-bottom: 58px;
-	
 }
 
 .menu li {
@@ -47,18 +46,26 @@ header {
 	color: #545454;
 }
 
+.menu_a:hover {
+	color: #F0D876;
+}
+
 .icon-mail, .icon-cog, .icon-user, .icon-home {
 	color: #a292b3;
+}
+
+.icon-mail:hover, .icon-cog:hover, .icon-user:hover, .icon-home:hover {
+	color: #F0D876;;
 } 
 
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?28921403');
-  src: url('../font/fontello.eot?28921403#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?28921403') format('woff2'),
-       url('../font/fontello.woff?28921403') format('woff'),
-       url('../font/fontello.ttf?28921403') format('truetype'),
-       url('../font/fontello.svg?28921403#fontello') format('svg');
+  src: url('../font/fontello.eot?40384930');
+  src: url('../font/fontello.eot?40384930#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?40384930') format('woff2'),
+       url('../font/fontello.woff?40384930') format('woff'),
+       url('../font/fontello.ttf?40384930') format('truetype'),
+       url('../font/fontello.svg?40384930#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -68,7 +75,7 @@ header {
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?28921403#fontello') format('svg');
+    src: url('../font/fontello.svg?40384930#fontello') format('svg');
   }
 }
 */
@@ -111,7 +118,10 @@ header {
 .icon-mail:before { content: '\e800'; } /* '' */
 .icon-cog:before { content: '\e801'; } /* '' */
 .icon-home:before { content: '\e802'; } /* '' */
+.icon-facebook-circled:before { content: '\f051'; } /* '' */
+.icon-twitter-circled:before { content: '\f057'; } /* '' */
 .icon-user:before { content: '\f061'; } /* '' */
+.icon-right:before { content: '\f178'; } /* '' */
 
 
 
@@ -231,7 +241,7 @@ header {
 .read_more {
 	text-decoration: none;
 	font-size: 13px;
-	font-family: "Segoe UI";
+	font-family: "Segoe UI" "Arial";
 	color: rgb(130, 105, 157);
 	font-style: italic;
 	line-height: 2.769;
@@ -240,4 +250,121 @@ header {
 	margin-left: 928px;
 	margin-right: 10px;
 	display: flex;
+}
+
+.read_more:hover {
+	color: #F0D876;
+}
+
+
+
+
+
+.block_4 {
+	width: 1020px;
+	margin: 0 140px 0 140px;
+	overflow: hidden;
+}
+
+.lorem_5 {
+	font-size: 25px;
+	font-family: "Segoe UI" "Arial"
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	line-height: 1.565;
+	text-align: center;
+	position: absolute;
+	margin-top: 1px;
+}
+
+.lorem_6 {
+	font-size: 25px;
+	font-family: "Segoe UI" "Arial"
+	color: rgb(0, 0, 0);
+	line-height: 1.565;
+	text-align: center;
+	position: absolute;
+	margin-left: 70px;
+	margin-top: 1px;
+
+}
+
+.line {
+	float: right;
+}
+/*.lorem_6:after {
+	content: "";
+	display: inline-block;
+	vertical-align: middle;
+	box-sizing: border-box;
+	width: 100%;
+	height: 5px;
+	background: #d6d7d7;
+	border: solid #fff;
+	border-width: 0 10px;
+	margin-right: -100%;
+}*/
+
+
+
+
+.block_5 {
+	width: 1020px;
+	margin: 44px 140px 60px 140px;
+	overflow: hidden;
+}
+
+
+
+footer {
+	width: 100%;
+	height: 67px;
+	border-bottom: 8px solid #a292b3;
+	background: #e6e6e6;
+}
+
+.copy {
+  font-size: 15px;
+  font-family: "Segoe UI" "Arial";
+  color: rgb(69, 66, 66);
+  line-height: 2.4;
+  text-align: center;
+  position: absolute;
+  margin-left: 140px;
+  margin-top: 20px;
+}
+
+
+.icon-twitter-circled {
+	color: #a292b3;
+	font-size: 30px;
+	float: right;
+	margin-right: 140px;
+	margin-top: 20px;
+}
+
+.icon-twitter-circled:hover {
+	color: #F0D876;
+}
+
+.icon-facebook-circled {
+	color: #a292b3;
+	font-size: 30px;
+	float: right;
+	margin-top: 20px;
+}
+
+.icon-facebook-circled:hover {
+	color: #F0D876;
+}
+
+.copy a {
+	text-decoration: none;
+}
+.BOD {
+	font-size: 20px;
+	font-family: "Myriad Pro" "Arial";
+	color: rgba(255, 255, 255, 0.969);
+	line-height: 0.308;
+	text-shadow: 0px 3px 0px rgba(130, 105, 157, 0.75);
 }
