--- a/GeekBrains/css/style.css
+++ b/GeekBrains/css/style.css
@@ -1,6 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
+    box-sizing: border-box;
 }
 
 .container {
@@ -180,23 +181,23 @@ header {
 }
 
 .lorem {
-  font-size: 23px;
-  font-family: "Segoe UI";
-  color: black;
-  font-style: italic;
-  line-height: 1.565;
-  text-align: center;
-  position: absolute;
+    font-size: 23px;
+    font-family: "Segoe UI";
+    color: black;
+    font-style: italic;
+    line-height: 1.565;
+    text-align: center;
+    position: absolute;
 }
 
 .lorem_1 {
-  font-size: 23px;
-  font-family: "Segoe UI";
-  color: rgb(130, 105, 157);
-  font-weight: bold;
-  font-style: italic;
-  line-height: 1.565;
-  text-align: center;
+    font-size: 23px;
+    font-family: "Segoe UI";
+    color: rgb(130, 105, 157);
+    font-weight: bold;
+    font-style: italic;
+    line-height: 1.565;
+    text-align: center;
 }
 
 
@@ -264,6 +265,7 @@ header {
 	width: 1020px;
 	margin: 0 140px 0 140px;
 	overflow: hidden;
+	position: relative;
 }
 
 .lorem_5 {
@@ -321,17 +323,18 @@ footer {
 	height: 67px;
 	border-bottom: 8px solid #a292b3;
 	background: #e6e6e6;
+	position: relative;
 }
 
 .copy {
-  font-size: 15px;
-  font-family: "Segoe UI" "Arial";
-  color: rgb(69, 66, 66);
-  line-height: 2.4;
-  text-align: center;
-  position: absolute;
-  margin-left: 140px;
-  margin-top: 20px;
+    font-size: 15px;
+    font-family: "Segoe UI" "Arial";
+    color: rgb(69, 66, 66);
+    line-height: 2.4;
+    text-align: center;
+    position: absolute;
+    margin-left: 140px;
+    margin-top: 20px;
 }
 
 
